[gd_scene format=3 uid="uid://b2cr5fnxayhs6"]

[ext_resource type="Script" uid="uid://cbw00gtxpj8sc" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://cgcou4snidhvc" path="res://player/assets/speed_effect.png" id="2_e7oew"]
[ext_resource type="Script" uid="uid://uvjvtnuj3d2b" path="res://player/weapons/weapon_module.gd" id="2_yllr7"]
[ext_resource type="Texture2D" uid="uid://beomgdn6psmo6" path="res://player/assets/ship_dmg0.png" id="3_2ieo8"]
[ext_resource type="Texture2D" uid="uid://djotuycnviqby" path="res://player/assets/ship.png" id="3_8t03j"]
[ext_resource type="Script" uid="uid://dxauybep1l104" path="res://player/engines/ship_engine_module.gd" id="4_32hag"]
[ext_resource type="Texture2D" uid="uid://ce6cbkkl1ebyh" path="res://player/assets/ship_dmg1.png" id="4_ebec5"]
[ext_resource type="PackedScene" uid="uid://b4yrsqg6hy4nm" path="res://generic/explosion.tscn" id="4_yw30f"]
[ext_resource type="PackedScene" uid="uid://cpjn6rqdqsoe7" path="res://player/engines/base_engine/base_engine.tscn" id="5_wodsf"]
[ext_resource type="Texture2D" uid="uid://88xkle8ei4g6" path="res://player/assets/ship_dmg2.png" id="5_yllr7"]
[ext_resource type="PackedScene" uid="uid://cu0wvfqelfi60" path="res://player/engines/burst_engine/burst_engine.tscn" id="6_32hag"]
[ext_resource type="AudioStream" uid="uid://u8tjqsmo33hg" path="res://player/assets/engine.ogg" id="6_boad6"]
[ext_resource type="Script" uid="uid://c8r28mx4wq1r5" path="res://components/health_component.gd" id="7_boad6"]
[ext_resource type="Script" uid="uid://delb4ia663h6v" path="res://player/components/player_input_component.gd" id="8_rgyib"]
[ext_resource type="Script" uid="uid://bh5hqmbepj133" path="res://components/hurtbox_component.gd" id="9_hg6s5"]
[ext_resource type="Script" uid="uid://cningoo26cdpa" path="res://player/components/shield_component.gd" id="10_8t03j"]
[ext_resource type="AudioStream" uid="uid://0nn3qwx5i37" path="res://assets/audio/item_equiped.wav" id="18_e7oew"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 34.0

[sub_resource type="SpriteFrames" id="SpriteFrames_kb6p2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8t03j")
}, {
"duration": 1.0,
"texture": ExtResource("3_2ieo8")
}, {
"duration": 1.0,
"texture": ExtResource("4_ebec5")
}, {
"duration": 1.0,
"texture": ExtResource("5_yllr7")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hg6s5"]
radius = 35.014282

[sub_resource type="Animation" id="Animation_tqiix"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e7oew"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333333, 0.26666668, 0.53333336, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.3, 0.3, 1), Color(1, 1, 1, 1), Color(1, 0.3, 0.3, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c35mf"]
resource_name = "weapon_pickup"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1.9749014, 1.8979383, 1.8979383, 1), Color(1, 1, 1, 1), Color(1.9749014, 1.8979383, 1.8979383, 1), Color(1, 1, 1, 1), Color(1.9749014, 1.8979383, 1.8979383, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c35mf"]
_data = {
&"RESET": SubResource("Animation_tqiix"),
&"hurt": SubResource("Animation_e7oew"),
&"weapon_pickup": SubResource("Animation_c35mf")
}

[node name="Player" type="RigidBody2D" unique_id=37309876 node_paths=PackedStringArray("animation_player", "ship_sprite", "speed_sprite", "health_component", "shield_component", "hurtbox_component", "ship_engine_module", "weapon_module") groups=["player"]]
contact_monitor = true
max_contacts_reported = 1
linear_damp = 4.0
angular_damp = 5.0
script = ExtResource("1_rkbax")
animation_player = NodePath("AnimationPlayer")
ship_sprite = NodePath("ShipSprite")
speed_sprite = NodePath("SpeedSprite")
health_component = NodePath("HealthComponent")
shield_component = NodePath("ShieldComponent")
hurtbox_component = NodePath("HurtboxComponent")
ship_engine_module = NodePath("ShipEngineModule")
weapon_module = NodePath("WeaponModule")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1416899759]
visible = false
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_onrkg")

[node name="SpeedSprite" type="Sprite2D" parent="." unique_id=884088152]
modulate = Color(18.892157, 18.892157, 18.892157, 0)
position = Vector2(17, 2.5579538e-13)
rotation = 3.1415927
scale = Vector2(0.10171056, 0.10171056)
texture = ExtResource("2_e7oew")

[node name="ShipEngineModule" type="Node2D" parent="." unique_id=652974926 node_paths=PackedStringArray("engine_sound", "current_engine")]
position = Vector2(-6, 0)
script = ExtResource("4_32hag")
engine_sound = NodePath("../EngineSound")
current_engine = NodePath("BaseEngine")

[node name="BaseEngine" parent="ShipEngineModule" unique_id=1829903821 instance=ExtResource("5_wodsf")]
visible = false

[node name="BurstEngine" parent="ShipEngineModule" unique_id=2070867146 instance=ExtResource("6_32hag")]
visible = false

[node name="ShipSprite" type="AnimatedSprite2D" parent="." unique_id=1026891787]
texture_filter = 1
position = Vector2(-7.1525574e-07, 0)
rotation = 1.5707964
scale = Vector2(2.1, 2.1)
sprite_frames = SubResource("SpriteFrames_kb6p2")

[node name="Explosion" parent="." unique_id=1727476015 instance=ExtResource("4_yw30f")]
visible = false

[node name="WeaponModule" type="Node2D" parent="." unique_id=1709160419]
position = Vector2(-3, 0)
script = ExtResource("2_yllr7")

[node name="GunCooldown" type="Timer" parent="WeaponModule" unique_id=1055391723]
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="." unique_id=1589903483]
wait_time = 2.0
one_shot = true

[node name="EngineSound" type="AudioStreamPlayer" parent="." unique_id=1321843519]
stream = ExtResource("6_boad6")
volume_db = -10.0

[node name="HealthComponent" type="Node" parent="." unique_id=1302177192]
script = ExtResource("7_boad6")
max_health = 100.0
metadata/_custom_type_script = "uid://c8r28mx4wq1r5"

[node name="PlayerInputComponent" type="Node" parent="." unique_id=261053269]
script = ExtResource("8_rgyib")
metadata/_custom_type_script = "uid://delb4ia663h6v"

[node name="ShieldComponent" type="Node" parent="." unique_id=1509943478 node_paths=PackedStringArray("health_component")]
script = ExtResource("10_8t03j")
health_component = NodePath("../HealthComponent")
max_shield = 100.0
shield = 100.0
shield_regen = 30.0
shield_regen_timer = 2.0
metadata/_custom_type_script = "uid://cningoo26cdpa"

[node name="RegenTimer" type="Timer" parent="ShieldComponent" unique_id=928415473]
one_shot = true

[node name="HurtboxComponent" type="Area2D" parent="." unique_id=2055247690 node_paths=PackedStringArray("health_component", "shield_component")]
collision_layer = 9
collision_mask = 9
script = ExtResource("9_hg6s5")
health_component = NodePath("../HealthComponent")
shield_component = NodePath("../ShieldComponent")
metadata/_custom_type_script = "uid://bh5hqmbepj133"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" unique_id=512164640]
visible = false
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_hg6s5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=410132034]
libraries/ = SubResource("AnimationLibrary_c35mf")
speed_scale = 2.0

[node name="ItemPickupSound" type="AudioStreamPlayer" parent="." unique_id=65574052]
stream = ExtResource("18_e7oew")

[connection signal="timeout" from="WeaponModule/GunCooldown" to="." method="_on_gun_cooldown_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_changed"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_depleted"]
[connection signal="aim" from="PlayerInputComponent" to="." method="_on_player_input_component_aim"]
[connection signal="move" from="PlayerInputComponent" to="." method="_on_player_input_component_move"]
[connection signal="move" from="PlayerInputComponent" to="ShipEngineModule" method="_on_player_input_component_move"]
[connection signal="shoot" from="PlayerInputComponent" to="WeaponModule" method="_on_shoot"]
[connection signal="shield_broken" from="ShieldComponent" to="." method="_on_shield_component_shield_broken"]
[connection signal="shield_changed" from="ShieldComponent" to="." method="_on_shield_changed"]
[connection signal="damage_taken" from="HurtboxComponent" to="." method="_on_damage_taken"]
